--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@ body {
   text-align: center;
   padding: 100px 20px;
   background-color: #f5f5f5;
+  font-size: 20px;
 }
-
 .cta {
   padding: 15px 30px;
   font-size: 1rem;
@@ -32,11 +32,53 @@ body {
   flex: 1;
   margin: 0 10px;
   padding: 20px;
-  background: #ffffff;
-  border: 1px solid #ddd;
+  background: #eeeeee;
+  border: 2px solid #ddd;
   border-radius: 8px;
   text-align: center;
+  font-size: 20px;
+  overflow: hidden;
 }
+
+.feature-card .small-text{
+  font-size: 16px;
+  text-align: justify;
+}
+
+.feature-card .small-bullet-text{
+  font-style: italic;
+  color: rgb(26, 26, 26);
+  padding-left:  15px;
+  font-size: 16px;
+  text-align: justify;
+}
+
+.feature-card .big-text{
+  font-weight: bold;
+  font-size: 18px;
+  text-align: left;
+}
+
+.feature-card .dropdown {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease-in-out;
+}
+
+.feature-card.open .dropdown {
+  max-height: 1000px;
+}
+
+.feature-card.open {
+  border-color: #007bff;
+  background: #e0f0ff;
+}
+
+.feature-card.lock {
+  background: #fdfdfd;
+  border-color: #9cccff;
+}
+
 
 .visual img {
   width: 100%;
