--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,54 @@
 /* style.css */
 body {
+
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* hero block */
 .hero {
   text-align: center;
   padding: 100px 20px;
-  background-color: #f5f5f5;
+
+  
   font-size: 20px;
+  background-color: #23232345;
+  color: rgba(255, 255, 255, 0.806);
 }
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/mushroom-bg.jpg');
+  background-color: #046e44;
+  background-position: center;
+  background-size: cover;
+  filter:blur(5px);
+  z-index: -1;
+}
+/* end of hero block */
+
+
 .cta {
   padding: 15px 30px;
   font-size: 1rem;
-  background-color: #007bff;
+  background-color: #c7ab38;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
+
+/* features block */
 .features {
+  background-color: #ffffff;
   display: flex;
   justify-content: space-around;
   padding: 50px 20px;
@@ -70,29 +96,62 @@ body {
 }
 
 .feature-card.open {
-  border-color: #007bff;
-  background: #e0f0ff;
+  border-color: #c6d384;
+  background: #e0ffe9;
 }
 
 .feature-card.lock {
-  background: #fdfdfd;
-  border-color: #9cccff;
+  background: #f4ffce;
+  border-color: #9cffc4;
 }
+/* end of features block */
 
+/* visual block */
+.visual {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  padding: 50px 20px;
+  background-color: #a0996a;
+}
 
 .visual img {
-  width: 100%;
+  width: 30%;
   max-width: 800px;
-  display: block;
   margin: 0 auto;
+  border-radius: 8%;
 }
+/* end of visual block */
 
+/* info block */
 .info {
   padding: 50px 20px;
+  background-color: #ffffff;
 }
+
+.info .header-text{
+  font-weight: bold;
+  font-size: 30px;
+  text-align: justify;
+}
+
+.info .medium-text{
+  font-size: 20px;
+  text-align: justify;
+}
+
+.info .small-text{
+  font-size: 17px;
+  text-align: justify;
+}
+/* end of info block */
+
 
 .cta-final {
   text-align: center;
+  background-color: #ffffff;
   padding: 70px 20px;
 }
 
@@ -110,5 +169,14 @@ footer {
   }
   .feature-card {
     margin: 10px 0;
+  }
+
+  .visual {
+    flex-direction: column;
+  }
+  
+  .visual img {
+    width: 80%;
+    margin: 20px 0;
   }
 }
